[package]
name = "shiguredo_mp4"
version = "2025.4.0"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "MP4 library"
homepage = "https://github.com/shiguredo/mp4-rust"
repository = "https://github.com/shiguredo/mp4-rust"
readme = "README.md"
categories = ["no-std"]

[dependencies]

[features]
default = ["std"]
std = []

[workspace]
members = ["crates/c-api","examples/dump_wasm", "examples/transcode_wasm"]
