[package]
name = "shiguredo_mp4"
version = "2026.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["Shiguredo Inc."]
license = "Apache-2.0"
description = "MP4 library"
homepage = "https://github.com/shiguredo/mp4-rust"
repository = "https://github.com/shiguredo/mp4-rust"
readme = "README.md"
categories = ["no-std"]

[dependencies]

[workspace]
members = ["crates/c-api", "crates/wasm", "examples/dump_wasm", "examples/transcode_wasm"]

[profile.release-wasm]
inherits = "release"
lto = true
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
