[package]
name = "transcode_wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
futures = "0.3.30"
orfail = { version = "1.1.0", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shiguredo_mp4 = { "path" = "../../" }
